--- a/game.html
+++ b/game.html
@@ -9,7 +9,9 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" href="images/index.css">
-<style>{overscroll-behavior: none;}</style>
+<style>{overscroll-behavior: none;
+	 overscroll-behavior: contain;
+	}</style>
 <title>Floof Ninja</title>
 <!--[if lt IE 9]><script>document.createElement("canvas");</script><![endif]-->
 </head>
