--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0023)https://weddingart.org/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <!-- Meta -->
@@ -10,12 +9,11 @@
     <link href="./resources/main.min.css" rel="stylesheet">
     
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://weddingart.org/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://weddingart.org/assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://weddingart.org/assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="https://weddingart.org/assets/favicons/site.webmanifest">
-    <link rel="mask-icon" href="https://weddingart.org/assets/favicons/safari-pinned-tab.svg" color="#615353">
-    <link rel="shortcut icon" href="https://weddingart.org/assets/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./resources/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./resources/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./resources/favicon-16x16.png">
+
+    <link rel="shortcut icon" href="./resources/favicon.ico">
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href="favicon.ico"> 
@@ -31,14 +29,14 @@
     <script type='text/javascript' src='http://code.jquery.com/jquery-1.12.1.min.js'></script>
     <script type="text/javascript" src="js/strip.pkgd.min.js"></script>
     <meta name="msapplication-TileColor" content="#fdeeee">
-    <meta name="msapplication-config" content="https://weddingart.org/assets/favicons/browserconfig.xml">
+    <meta name="msapplication-config" content="./resources/browserconfig.xml">
     <meta name="theme-color" content="#fdeeee">
 
     <!-- Social Images -->
-    <meta content="https://weddingart.org/assets/images/TW.jpeg" itemprop="image">
+    <meta content="./resources/TW.jpeg" itemprop="image">
 
-    <meta content="https://weddingart.org/assets/images/TW.jpeg" name="twitter:image">
-    <meta content="https://weddingart.org/assets/images/FB.jpeg" property="og:image">
+    <meta content="./resources/TW.jpeg" name="twitter:image">
+    <meta content="./resources/FB.jpeg" property="og:image">
     
     <!-- Titles -->
     <meta content="Sam and Sharon Forever" itemprop="name">
@@ -54,10 +52,10 @@
 
     <!-- Twitter:extra -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@weddingart">
+    <meta name="twitter:site" content="@kanyewest">
 
     <!-- Facebook:extra -->
-    <meta property="og:url" content="https://weddingart.org">
+    <meta property="og:url" content="https://samandsharonforever.com">
     <meta property="og:type" content="website">
 
     <!-- HELP -->
@@ -144,7 +142,7 @@
               <span class="tooltiptext4">Please!</span></span>
                <br/>  
              <span class="tooltip"> I still have questions!
-             <span class="tooltiptext5">Text 514-576-8500 or email Sharon at <a href = "mailto: peanutbutter@samandsharonforever.com" target="_blank">peanutbutter@samandsharonforever.com</a> or Sam at <a href = "mailto: falcon@samandsharonforever.com" target="_blank">falcon@samandsharonforever.com</a></span></span>
+             <span class="tooltiptext5">Text 514-576-8500 or email Sharon at <a href = "mailto: sharoneslo@gmail.com" target="_blank">sharoneslo@gmail.com</a> or Sam at <a href = "mailto: sam.tse@live.com" target="_blank">sam.tse@live.com</a></span></span>
              <br/>
           <span class="tooltip"> How do I get to venue? Parking?
                  <span class="tooltiptext6">For the ceremony, there is parking at the church. There is no official parking for the reception, but there are Green P's around. It's also very accessible by TTC (On Bloor, just East of Bathurst station). We are arranging <a href="./game.html" target= "_blank"; style="color:red"> carpools! </a></span></span>
