--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
              <span class="tooltiptext5">Text 514-576-8500 or email Sharon at <a href = "mailto: sharoneslo@gmail.com" target="_blank">sharoneslo@gmail.com</a> or Sam at <a href = "mailto: sam.tse@live.com" target="_blank">sam.tse@live.com</a></span></span>
              <br/>
           <span class="tooltip"> How do I get to venue? Parking?
-                 <span class="tooltiptext6">For the ceremony, there is parking at the church. There is no official parking for the reception, but there are Green P's around. It's also very accessible by TTC (On Bloor, just East of Bathurst station). We are arranging <a href="./game.html" target= "_blank"; style="color:red"> carpools! </a></span></span>
+                 <span class="tooltiptext6">For the ceremony, there is parking at the church. There is no official parking for the reception, but there are Green P's around. It's also very accessible by TTC (On Bloor, just East of Bathurst station). We are arranging carpools!</span>
          <br/>
              <span class="tooltip">What about COVID?
              <span class="tooltiptext7">We'll be following whatever Ontario guidelines require! All our guest will need to have up-to-date vaccination records!</span></span>
