--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <img class="fixed" src="./resources/website3.jpg">
         </figure>
          <figure class="picture">
-          <a href="https://forms.gle/rHFgABvNMY5mKm1Q9" target="_blank">
+          <a href="https://en.wikipedia.org/wiki/Gluttony" target="_blank">
             <div class="button"; style=" margin-top:40%;">
           <img class="poster2" src="./resources/button.png"> 
             </div>
