--- a/make.html
+++ b/make.html
@@ -28,10 +28,10 @@
     <!-- Top Bar START -->
     <div id="palleon-top-bar">
         <!-- Logo -->
-        <div class="palleon-logo">
+        <a href="https://pangramgames.com/home"><div class="palleon-logo">
             <img class="logo-desktop" src="assets/logo.png" />
             <img class="logo-mobile" src="assets/logo-small.png" />
-        </div>
+        </div></a>
         <!-- Top Bar Menu -->
         <div class="palleon-top-bar-menu">
             <!-- History -->
