--- a/make.html
+++ b/make.html
@@ -28,7 +28,7 @@
     <!-- Top Bar START -->
     <div id="palleon-top-bar">
         <!-- Logo -->
-        <a href="https://pangramgames.com/home"><div class="palleon-logo">
+        <a href="https://pangramgames.com"><div class="palleon-logo">
             <img class="logo-desktop" src="assets/logo.png" />
             <img class="logo-mobile" src="assets/logo-small.png" />
         </div></a>
