--- a/make.html
+++ b/make.html
@@ -66,7 +66,10 @@
     <!-- Top Bar END -->
     <!-- Icon Menu START -->
     <div id="palleon-icon-menu">
-               <button id="palleon-btn-text" type="button" class="palleon-icon-menu-btn" data-target="#palleon-text">
+        <button id="palleon-btn-text" type="button" class="palleon-icon-menu-btn" data-target="#palleon-adjust">
+            <span class="material-icons">adjust</span><span class="palleon-icon-menu-title">Adjust</span>
+        </button>      
+        <button id="palleon-btn-text" type="button" class="palleon-icon-menu-btn" data-target="#palleon-text">
             <span class="material-icons">title</span><span class="palleon-icon-menu-title">Text</span>
         </button>
         <button id="palleon-btn-image" type="button" class="palleon-icon-menu-btn" data-target="#palleon-image">
