--- a/make.html
+++ b/make.html
@@ -66,16 +66,17 @@
     <!-- Top Bar END -->
     <!-- Icon Menu START -->
     <div id="palleon-icon-menu">
-        <button id="palleon-btn-text" type="button" class="palleon-icon-menu-btn" data-target="#palleon-adjust">
-            <span class="material-icons">adjust</span><span class="palleon-icon-menu-title">Adjust</span>
-        </button>      
+        <button id="palleon-btn-adjust" type="button" class="palleon-icon-menu-btn active"
+            data-target="#palleon-adjust">
+            <span class="material-icons">tune</span><span class="palleon-icon-menu-title">Adjust</span>
+        </button> 
         <button id="palleon-btn-text" type="button" class="palleon-icon-menu-btn" data-target="#palleon-text">
             <span class="material-icons">title</span><span class="palleon-icon-menu-title">Text</span>
         </button>
         <button id="palleon-btn-image" type="button" class="palleon-icon-menu-btn" data-target="#palleon-image">
             <span class="material-icons">add_photo_alternate</span><span class="palleon-icon-menu-title">Image</span>
         </button>
-       <button id="palleon-btn-draw" type="button" class="palleon-icon-menu-btn" data-target="#palleon-draw">
+        <button id="palleon-btn-draw" type="button" class="palleon-icon-menu-btn" data-target="#palleon-draw">
             <span class="material-icons">brush</span><span class="palleon-icon-menu-title">Brushes</span>
         </button>
         <button id="palleon-btn-elements" type="button" class="palleon-icon-menu-btn" data-target="#palleon-elements">
@@ -2494,7 +2495,7 @@
                     <div class="palleon-control-wrap">
                         <label class="palleon-control-label">Brush Type</label>
                         <div class="palleon-control">
-                            <select id="palleon-brush-select" class="palleon-select" autocomplete="off">
+                             <select id="palleon-brush-select" class="palleon-select" autocomplete="off">
                                 <option value="pencil" selected>Pencil</option>
                                 <option value="erase">Erase BG Image</option>
                             </select>
