--- a/make.html
+++ b/make.html
@@ -2483,7 +2483,7 @@
                 </div>
             </div>
             <!-- Apps END -->
-            <!-- Brushes START -->
+<!-- Brushes START -->
             <div id="palleon-draw" class="palleon-icon-panel-content panel-hide">
                 <!-- Start Drawing Button -->
                 <button id="palleon-draw-btn" type="button" class="palleon-btn primary palleon-lg-btn btn-full"><span class="material-icons">brush</span>Start Drawing</button>
@@ -2495,8 +2495,13 @@
                     <div class="palleon-control-wrap">
                         <label class="palleon-control-label">Brush Type</label>
                         <div class="palleon-control">
-                             <select id="palleon-brush-select" class="palleon-select" autocomplete="off">
+                            <select id="palleon-brush-select" class="palleon-select" autocomplete="off">
                                 <option value="pencil" selected>Pencil</option>
+                                <option value="circle">Circle</option>
+                                <option value="spray">Spray</option>
+                                <option value="hline">H-line Pattern</option>
+                                <option value="vline">V-line Pattern</option>
+                                <option value="square">Square Pattern</option>
                                 <option value="erase">Erase BG Image</option>
                             </select>
                         </div>
