--- a/make.html
+++ b/make.html
@@ -73,6 +73,9 @@
         <button id="palleon-btn-text" type="button" class="palleon-icon-menu-btn" data-target="#palleon-text">
             <span class="material-icons">title</span><span class="palleon-icon-menu-title">Text</span>
         </button>
+        <button id="palleon-btn-shapes" type="button" class="palleon-icon-menu-btn" data-target="#palleon-shapes">
+            <span class="material-icons">category</span><span class="palleon-icon-menu-title">Shapes</span>
+        </button>
         <button id="palleon-btn-image" type="button" class="palleon-icon-menu-btn" data-target="#palleon-image">
             <span class="material-icons">add_photo_alternate</span><span class="palleon-icon-menu-title">Image</span>
         </button>
